--- a/src/components/portal/user/calendar/CalendarForm.css
+++ b/src/components/portal/user/calendar/CalendarForm.css
@@ -3,7 +3,7 @@
   max-width: 100%;
   background-color: #fff;
   color: #222;
-  border-radius: 8px;
+  border-radius: 0.25rem;
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.125em;
@@ -33,18 +33,18 @@ abbr[title] {
 .react-calendar__tile:enabled:focus {
   background: #f8f8fa;
   color: #6f48eb;
-  border-radius: 6px;
+  border-radius: 0.25rem;
 }
 .react-calendar__tile--now {
   background: #6f48eb33;
-  border-radius: 6px;
+  border-radius: 0.25rem;
   font-weight: bold;
   color: #6f48eb;
 }
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
   background: #6f48eb33;
-  border-radius: 6px;
+  border-radius: 0.25rem;
   font-weight: bold;
   color: #6f48eb;
 }
@@ -54,7 +54,7 @@ abbr[title] {
 }
 .react-calendar__tile--active {
   background: #6f48eb;
-  border-radius: 6px;
+  border-radius: 0.25rem;
   font-weight: bold;
   color: white;
 }
@@ -69,21 +69,15 @@ abbr[title] {
 .react-calendar__tile--range {
   background: #f8f8fa;
   color: #6f48eb;
-  border-radius: 0;
+  border-radius: 0.25rem;
 }
 .react-calendar__tile--rangeStart {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  border-top-left-radius: 6px;
-  border-bottom-left-radius: 6px;
+  border-radius: 0.25rem;
   background: #6f48eb;
   color: white;
 }
 .react-calendar__tile--rangeEnd {
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
+  border-radius: 0.25rem;
   background: #6f48eb;
   color: white;
 }
